--- a/Android Architecture Components & Jetpack/MVVMSampleApp/app/src/main/res/layout/activity_login.xml
+++ b/Android Architecture Components & Jetpack/MVVMSampleApp/app/src/main/res/layout/activity_login.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ui.auth.LoginActivity">
 
     <EditText
         android:id="@+id/edtEmail"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:ems="10"
         android:hint="Email Id"
         android:inputType="textEmailAddress"
@@ -23,7 +23,7 @@
     <EditText
         android:id="@+id/edtPassword"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginTop="50dp"
         android:ems="10"
         android:hint="Password"
